--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
               </div>
             </div>
             <div class="index-fact__inner-back">
-              Joshua & Rojelio
+              Joshua & Rogelio
             </div>
           </div>
         </li>
