--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="canonical" href="https://danielaandmoe.com/">
+    <link rel="canonical" href="https://gia-and-michael.party/">
     <title>Gia Upchurch & Michael Burt - Boulder Wedding</title>
     <meta name="title" content="Gia Upchurch & Michael Burt - Boulder Wedding">
     <meta name="description" content="Saturday, August 20, 2022 in Longmont, Colorado, we'll be getting celebrating our marriage. Come for a weekend of summer fun in Colorado.">
@@ -403,7 +403,7 @@
                 <div class="index-fact__inner-front-icon">
                   <img src="/images/icon/home-37d05e2c.svg" alt="Home" />
                 </div>
-                Where is our dream house?
+                What is our favorite Boulder brewery?
               </div>
             </div>
             <div class="index-fact__inner-back">
