--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
               </div>
             </div>
             <div class="index-fact__inner-back">
-              Trick question, we don't know!
+              VisionQuest!
             </div>
           </div>
         </li>
@@ -418,12 +418,12 @@
                 <div class="index-fact__inner-front-icon">
                   <img src="/images/icon/palm-334ee2e3.svg" alt="Palm" />
                 </div>
-                Favorite LA spot?
+                Our furry nemisis on McKinley Drive?
               </div>
             </div>
             <div class="index-fact__inner-back">
               <div>
-               Daniela: <a target="_blank" href="https://thedoughroom.com/">The Doughroom</a><br>Moe: <a target="_blank" href="https://www.yelp.com/biz_photos/resident-los-angeles-2?select=i_HFCNafsOAkjPiR0m9A0Q">Resident</a>
+                Squirrel 😈
              </div>
             </div>
           </div>
