--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@
     <div class="footer-attr">
       <div>
         <span>
-          <img src="/images/heart.png" alt="Location">
+          <img src="/images/heart.png" alt="Location" style="width:100px;">
         </span>
         gia & michael</div>
     </div>
