--- a/index.html
+++ b/index.html
@@ -373,11 +373,11 @@
                 <div class="index-fact__inner-front-icon">
                   <img src="/images/icon/pasta-20cdfcab.svg" alt="Pasta" />
                 </div>
-                Comfort food?
+                New found pandemic hobby?
               </div>
             </div>
             <div class="index-fact__inner-back">
-              Pasta<br>(Papardelle!)
+              Golf
             </div>
           </div>
         </li>
@@ -447,10 +447,10 @@
     <div class="container">
       <div class="row justify-content-md-center">
         <div class="col col-md-10">
-          <h5 class="text-center">Join Us in California</h5>
-          <h2 class="text-center">Marriage Celebration</h2>
+          <h5 class="text-center">Join Us in Colorado</h5>
+          <h2 class="text-center">Wedding & Reception</h2>
           <p class="large">
-            We will marry in San Francisco in August 2019 at a small ceremony with our parents. But we definitely want to celebrate this special event with all our friends and family. Whether flying in or driving in, we hope to dance the night away in beautiful LA!
+            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occassion with our friends and family. the ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, we will continue the party on Pearl Street in beautiful Boulder.
           </p>
         </div>
       </div>
