--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@
         <div class="col col-md-10">
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
-          <p class="large">
-            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occassion with our friends and family. the ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, we will continue the party on Pearl Street in beautiful Boulder.
+          <p class="large text-center">
+            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occassion with our friends and family. The ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, join us on Pearl Street in beautiful Boulder for some after party antics.
           </p>
         </div>
       </div>
@@ -607,7 +607,8 @@
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>6pm to 10pm</p>
+                  <!-- <p>6pm to 10pm</p> -->
+                  <p>tbd</p>
                 </div>
               </div>
             </div>
@@ -617,8 +618,9 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>Under The Sun<br>627 South Broadway<br>Boulder, CO 80305</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/tSUKheWx7jrMZXoe7">Map</a>
+                  tbd
+                  <!-- <p>Under The Sun<br>627 South Broadway<br>Boulder, CO 80305</p>
+                  <a class="button-map" target="_blank" href="https://goo.gl/maps/tSUKheWx7jrMZXoe7">Map</a> -->
                 </div>
               </div>
             </div>
@@ -628,7 +630,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Some details about our rehearsal dinner venue.</p>
+                  <p class="sans">tbd</p>
                 </div>
               </div>
             </div>
