--- a/index.html
+++ b/index.html
@@ -601,14 +601,13 @@
           </div>
           <div class="col-12 col-md-9">
             <h4>Rehearsal Dinner</h4>
-            <div class="index-event__detail">
+            <!-- <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <!-- <p>6pm to 10pm</p> -->
-                  <p>tbd</p>
+                  <p>6pm to 10pm</p>
                 </div>
               </div>
             </div>
@@ -618,12 +617,11 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  tbd
-                  <!-- <p>Under The Sun<br>627 South Broadway<br>Boulder, CO 80305</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/tSUKheWx7jrMZXoe7">Map</a> -->
+                  <p>Under The Sun<br>627 South Broadway<br>Boulder, CO 80305</p>
+                  <a class="button-map" target="_blank" href="https://goo.gl/maps/tSUKheWx7jrMZXoe7">Map</a>
                 </div>
               </div>
-            </div>
+            </div> -->
             <div class="index-event__detail detail-sans">
               <div class="row">
                 <div class="col-2 col-md-1">
