--- a/index.html
+++ b/index.html
@@ -601,6 +601,22 @@
           </div>
           <div class="col-12 col-md-9">
             <h4>Rehearsal Dinner</h4>
+            <div class="index-event__detail">
+              <div class="row">
+                <div class="col-2 col-md-1">
+                </div>
+                <div class="col col-md-8">
+                </div>
+              </div>
+            </div>
+            <div class="index-event__detail">
+              <div class="row">
+                <div class="col-2 col-md-1">
+                </div>
+                <div class="col col-md-8">
+                </div>
+              </div>
+            </div>
             <!-- <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
