--- a/index.html
+++ b/index.html
@@ -604,16 +604,20 @@
             <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
+                  <br>
                 </div>
                 <div class="col col-md-8">
+                  <br>
                 </div>
               </div>
             </div>
             <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
+                  <br>
                 </div>
                 <div class="col col-md-8">
+                  <br>
                 </div>
               </div>
             </div>
@@ -717,7 +721,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">What’s a trip to LA without a day at the beach?! Let’s have a lazy Saturday and relax in the sun. Feel free to pick up picnic food and drinks or grab a bite nearby at the beach stalls. We're meeting near Lifeguard Tower 26.</p>
+                  <p class="sans">The main event. </p>
                 </div>
               </div>
             </div>
