--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. </p>
+                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony will being around 4pm followed by cocktails, dinner, and dancing.</p>
                 </div>
               </div>
             </div>
