--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">What’s a trip to LA without a day at the beach?! Let’s have a lazy Saturday and relax in the sun. Feel free to pick up picnic food and drinks or grab a bite nearby at the beach stalls. We're meeting near Lifeguard Tower 26.</p>
+                  <p class="sans">Wind down the weekend with the bride and groom at the beautiful Chautauqua Park for brunch on Sunday morning. After breakfast, take advantage of the crowwn jewel of Boulder with a hike in the Flatirons.</p>
                 </div>
               </div>
             </div>
