--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
       <div class="row justify-content-md-center">
         <div class="col col-md-10">
           <h5 class="text-center">Our Story</h5>
-          <h2 class="text-center">Dance, Dance, Dance</h2>
+          <h2 class="text-center">A match made in Boulder</h2>
           <p class="large">
-            As a pair of determined designers, Daniela and Moe first got to know each other working late nights in design studio during grad school— brewing that third pot of coffee, sharing tasty treats, and exchanging upbeat bops. Yet it wasn’t until a group outing where they were left alone on the dance floor, grooving to funky soul beats, when they knew they were meant to be together.
+            Gia & Michael first started spending time together in the summer of 2018, and they have been pretty inseparable since. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually, toting some gifts for his new hunny, and assurances that he did indeed send a postcard. Gia was pretty skeptical, until a few months later when a postcard arrived in her mailbox.
           </p>
         </div>
       </div>
