--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <h5 class="text-center">Our Story</h5>
           <h2 class="text-center">A match made in Boulder</h2>
           <p class="large text-center">
-            Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually, toting some gifts for his new hunny, and assurances that he did indeed send a postcard. Gia was pretty skeptical, until a few months later when a postcard showed up in her mailbox. They have been happily inseparable since.
+            Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually, toting some gifts for his new hunny, and assurances that he did indeed send a postcard. Gia was pretty skeptical, until a few months later when she found a postcard in her mailbox. They have been happily inseparable since.
           </p>
         </div>
       </div>
@@ -317,7 +317,7 @@
       <ul class="index-facts__list">
         <li class="index-fact index-fact__intro">
           <h5>Fun Facts</h5>
-          <h3>Quirky lil quiz about the happy couple</h3>
+          <h3>Lil' quiz about the happy couple</h3>
           <h6><span class="d-md-none">Click</span><span class="d-none d-md-inline">Hover</span> for Answer</h6>
         </li>
 
