--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
       <ul class="index-facts__list">
         <li class="index-fact index-fact__intro">
           <h5>Fun Facts</h5>
-          <h3>Lil' quiz about the happy couple</h3>
+          <h3>A lil quiz about the soon-to-be newlyweds</h3>
           <h6><span class="d-md-none">Click</span><span class="d-none d-md-inline">Hover</span> for Answer</h6>
         </li>
 
