--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">Wind down the weekend with the bride and groom at the beautiful Chautauqua Park for brunch on Sunday morning. After breakfast, take advantage of the crowwn jewel of Boulder with a hike in the Flatirons.</p>
+                  <p class="sans">Wind down the weekend with the bride and groom at the beautiful Chautauqua Park for brunch on Sunday morning. After breakfast, take advantage of the crown jewel of Boulder with a hike in the Flatirons.</p>
                 </div>
               </div>
             </div>
