--- a/index.html
+++ b/index.html
@@ -1077,8 +1077,29 @@
 
     <div class="container">
       <div class="row justify-content-md-center">
-        <div class="col col-md-7 col-lg-5">
-          <!-- <h5 class="text-center">RSVP</h5> -->
+
+        <form name="contact" method="POST" data-netlify="true">
+          <p>
+            <label>Your Name: <input type="text" name="name" /></label>
+          </p>
+          <p>
+            <label>Your Email: <input type="email" name="email" /></label>
+          </p>
+          <p>
+            <label>Your Role: <select name="role[]" multiple>
+              <option value="leader">Leader</option>
+              <option value="follower">Follower</option>
+            </select></label>
+          </p>
+          <p>
+            <label>Message: <textarea name="message"></textarea></label>
+          </p>
+          <p>
+            <button type="submit">Send</button>
+          </p>
+        </form>
+
+        <!-- <div class="col col-md-7 col-lg-5">
           <h2 class="text-center">RSVP</h2>
 
           <div class="js-form" style="display: block">
@@ -1106,7 +1127,10 @@
           <div class="index-rsvp__success js-form-success" style="display: none">
             <span>Thanks!</span><br>We've receieved your response.
           </div>
-        </div>
+        </div> -->
+
+
+
       </div>
     </div>
   </section>
