--- a/index.html
+++ b/index.html
@@ -1078,26 +1078,35 @@
     <div class="container">
       <div class="row justify-content-md-center">
 
-        <form name="contact" method="POST" data-netlify="true">
-          <p>
-            <label>Your Name: <input type="text" name="name" /></label>
-          </p>
-          <p>
-            <label>Your Email: <input type="email" name="email" /></label>
-          </p>
-          <p>
-            <label>Your Role: <select name="role[]" multiple>
-              <option value="leader">Leader</option>
-              <option value="follower">Follower</option>
-            </select></label>
-          </p>
-          <p>
-            <label>Message: <textarea name="message"></textarea></label>
-          </p>
-          <p>
-            <button type="submit">Send</button>
-          </p>
-        </form>
+        <div class="col col-md-7 col-lg-5">
+          <h2 class="text-center">RSVP</h2>
+
+          <form name="contact" method="POST" data-netlify="true">
+            <p>
+              <h5>Your Name<input type="text" name="name" placeholder="Full name" /></h5>
+            </p>
+            <p>
+              <h5>Your Response</h5>
+                <div class="index-rsvp__options">
+                  <button type="button" class="index-rsvp__option is-active js-rsvp-option custom-control-input" id="YES">Joyfully Accepts</button>
+                  <button type="button" class="index-rsvp__option js-rsvp-option custom-control-input" id="NO">Regretfully Declines</button>
+                </div>
+            </p>
+            <p>
+              <h5>Your Email<input type="email" name="email" placeholder="Email (for updates)" /></h5>
+            </p>
+            <p>
+              <h5>Guests Attending<input type="text" name="guests" placeholder="List any additional guests" /></h5>
+            </p>
+            <p>
+              <h5>Dietary Restrictions<input type="text" name="dietary" placeholder="List any special dietary needs" /></h5>
+            </p>
+            <p>
+              <button class="index-rsvp__button" type="submit">Send</button>
+            </p>
+          </form>
+
+        </div>
 
         <!-- <div class="col col-md-7 col-lg-5">
           <h2 class="text-center">RSVP</h2>
