--- a/index.html
+++ b/index.html
@@ -1088,8 +1088,8 @@
             <p>
               <h5>Your Response</h5>
                 <div class="index-rsvp__options">
-                  <input type="button" class="index-rsvp__option is-active js-rsvp-option custom-control-input" name="yes" id="YES" value="Joyfully Accepts" style="margin-right:10px;" >
-                  <input type="button" class="index-rsvp__option js-rsvp-option custom-control-input" name="no" id="NO" value="Regretfully Declines" >
+                  <input type="button" class="index-rsvp__option is-active js-rsvp-option custom-control-input" name="yes" id="YES" value="Joyfully Accepts" style="margin-right:10px;" />
+                  <input type="button" class="index-rsvp__option js-rsvp-option custom-control-input" name="no" id="NO" value="Regretfully Declines" />
                 </div>
             </p>
             <p>
