--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/footprint-ac7d4a6b.svg" alt="Footprint" />
+                  <img src="/images/icon/flower.png" style="width:5em; height:5em; margin-top:2em;" alt="Flower" />
                 </div>
                 What is our favorite flower to grow?
               </div>
@@ -340,7 +340,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/calendar-d0eafa06.svg" alt="Calendar" />
+                  <img src="/images/icon/heart.png" style="width:4em; height:4em; margin-top:2em;" alt="Heart" />
                 </div>
                 Where was our first date?
               </div>
@@ -355,7 +355,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/mit-6891628f.svg" alt="Mit" />
+                  <img src="/images/icon/flicker.png" style="width:5em; height:5em; margin-top:2em;" alt="Northern Flicker" />
                 </div>
                 What is our favorite bird?
               </div>
@@ -370,7 +370,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/pasta-20cdfcab.svg" alt="Pasta" />
+                  <img src="/images/icon/corona.png" style="width:5em; height:5em; margin-top:2em;" alt="Corona Virus" />
                 </div>
                 New found pandemic hobby?
               </div>
@@ -385,7 +385,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/cactus-f69624f6.svg" alt="Cactus" />
+                  <img src="/images/icon/cactus.png" style="width:6em; height:6em; margin-top:1em;" alt="Cactus" />
                 </div>
                 What are the names of our cacti?
               </div>
@@ -400,7 +400,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/home-37d05e2c.svg" alt="Home" />
+                  <img src="/images/icon/beers.png" style="width:5em; height:5em; margin-top:2em;" alt="Beers" />
                 </div>
                 What is our favorite Boulder brewery?
               </div>
@@ -415,7 +415,7 @@
             <div class="index-fact__inner-front">
               <div>
                 <div class="index-fact__inner-front-icon">
-                  <img src="/images/icon/palm-334ee2e3.svg" alt="Palm" />
+                  <img src="/images/icon/squirrel.png" style="width:5em; height:5em; margin-top:2em;" alt="Squirrel" />
                 </div>
                 Our furry nemisis on McKinley Drive?
               </div>
@@ -498,7 +498,7 @@
         <div class="row">
           <div class="index-event__graphic">
             <figure class="index-event__image">
-              <img src="/images/vq.png" alt="Palihotel Los Angeles" />
+              <img src="/images/vq.png" alt="VisionQuest" />
             </figure>
           </div>
           <div class="col col-md-3">
@@ -891,7 +891,7 @@
       <div class="index-la__cards">
         <div class="index-la__card--full">
           <div class="index-la__card-icon">
-            <img src="/images/icon/bell-12d84be9.svg" alt="Bell" />
+            <img src="/images/icon/hotel.png" style="width:6em; height:6em; margin-top:3em;" alt="Hotel" />
           </div>
           <h4>Stay</h4>
           <div class="index-hotels">
@@ -970,7 +970,7 @@
       <div class="index-la__cards">
         <div class="index-la__card">
           <div class="index-la__card-icon">
-            <img src="/images/icon/fork-6cabbaef.svg" alt="Fork" />
+            <img src="/images/icon/food.png" style="width:4em; height:4em; margin: 4em;" alt="Food" />
           </div>
           <h4>Eat</h4>
           <ul>
@@ -995,7 +995,7 @@
 
         <div class="index-la__card">
           <div class="index-la__card-icon">
-            <img src="/images/icon/drink-de5bc5bc.svg" alt="Drink" />
+            <img src="/images/icon/drink.png" style="width:6em; height:6em; margin: 3em;" alt="Drink" />
           </div>
           <h4>Drink</h4>
           <ul>
@@ -1020,7 +1020,7 @@
 
         <div class="index-la__card">
           <div class="index-la__card-icon">
-            <img src="/images/icon/glasses-7bea2aee.svg" alt="Glasses" />
+            <img src="/images/icon/play.png" style="width:9em; height:9em; margin: 2.5em;" alt="Mountains" />
           </div>
           <h4>Play</h4>
           <ul>
@@ -1088,19 +1088,22 @@
             <p>
               <h5>Your Response</h5>
                 <div class="index-rsvp__options">
-                  <input type="button" class="index-rsvp__option is-active js-rsvp-option custom-control-input" name="yes" id="YES" value="Joyfully Accepts" style="margin-right:10px;" />
-                  <input type="button" class="index-rsvp__option js-rsvp-option custom-control-input" name="no" id="NO" value="Regretfully Declines" />
+                  <input type="button" class="index-rsvp__option is-active js-rsvp-option custom-control-input" name="yes" id="rsvp-response-yes" value="Joyfully Accepts" style="margin-right:10px;" />
+                  <input type="button" class="index-rsvp__option js-rsvp-option custom-control-input" name="no" id="rsvp-response-no" value="Regretfully Declines" />
+                  <input hidden="true" type="text" name="rsvp_response" id="rsvp-response-hidden" value="Joyfully Accepts" />
                 </div>
             </p>
-            <p>
-              <h5>Your Email<input type="email" name="email" placeholder="Email (for updates)" /></h5>
-            </p>
-            <p>
-              <h5>Guests Attending<input type="text" name="guests" placeholder="List any additional guests" /></h5>
-            </p>
-            <p>
-              <h5>Dietary Restrictions<input type="text" name="dietary" placeholder="List any special dietary needs" /></h5>
-            </p>
+            <div class="index-rsvp__show is-active js-rsvp-show">
+              <p>
+                <h5>Your Email<input type="email" name="email" placeholder="Email (for updates)" /></h5>
+              </p>
+              <p>
+                <h5>Names of Additional Guests Attending<input type="text" name="guests" placeholder="List any additional guests" /></h5>
+              </p>
+              <p>
+                <h5>Dietary Restrictions<input type="text" name="dietary" placeholder="List any special dietary needs" /></h5>
+              </p>
+            </div>
             <p>
               <button class="index-rsvp__button" type="submit">Send</button>
             </p>
