--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Saturday, August 20, 2022 in Longmont, Colorado, we'll be getting celebrating our marriage. Come for a weekend of summer fun in Colorado.">
     <link href="/stylesheets/application-7c2a332c.css" rel="stylesheet" />
     <link href="/stylesheets/addons.css" rel="stylesheet" />
-    <link rel="shortcut icon" type="image/x-icon" sizes="16x16 32x32 48x48 64x64" href="/images/favicon-da81668a.png">
+    <link rel="shortcut icon" type="image/x-icon" sizes="16x16 32x32 48x48 64x64" href="/images/icon/ico.png">
     <!--[if IE]><link rel="shortcut icon" href="favicon.png"><![endif]-->
 
   </head>
@@ -449,7 +449,7 @@
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
           <p class="large text-center">
-            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occassion with our friends and family. The ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, join us on Pearl Street in beautiful Boulder for some after party antics.
+            We will marry at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin at 4pm followed by cocktails, dinner, and dancing. Following the reception, join us on Pearl Street in beautiful Boulder for some after party antics.
           </p>
         </div>
       </div>
