update registry url

--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
             </div>
           </div>
           <div class="col-12 col-md-9">
-            <h4>Rehearsal Dinner</h4>
+            <h4>Party Before the Party</h4>
             <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
@@ -622,13 +622,13 @@
                 </div>
               </div>
             </div>
-            <!-- <div class="index-event__detail">
+            <div class="index-event__detail">
               <div class="row">
                 <div class="col-2 col-md-1">
                   <h6>Time</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>6pm to 10pm</p>
+                  <p>6:30pm to 10pm</p>
                 </div>
               </div>
             </div>
@@ -638,18 +638,18 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>Under The Sun<br>627 South Broadway<br>Boulder, CO 80305</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/tSUKheWx7jrMZXoe7">Map</a>
+                  <p>Rayback Collective<br>2775 Valmont Rd<br>Boulder, CO 80304</p>
+                  <a class="button-map" target="_blank" href="https://g.page/Rayback?share">Map</a>
                 </div>
               </div>
-            </div> -->
+            </div>
             <div class="index-event__detail detail-sans">
               <div class="row">
                 <div class="col-2 col-md-1">
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">tbd</p>
+                  <p class="sans">Catch up with old friends and meet new ones at Rayback Collective, a sprawling, kid-friendly, outdoor cocktail and beer garden with several food truck options. We will be holding court all evening, so stop by whenever. Parking can be challenging at this popular Boulder elstablishment, your best bet may be to park <a style="color:#FF5734;" target="_blank" href="https://goo.gl/maps/ADYxDL3CDoBwEExz9">here</a> on Glenwood and walk south on the bike path.</p>
                 </div>
               </div>
             </div>
@@ -727,8 +727,18 @@
                   <h6>Where</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p>Ya Ya Farm & Orchard<br>6914 Ute Hwy<br>Longmont, CO 80503</p>
-                  <a class="button-map" target="_blank" href="https://goo.gl/maps/ZripAcjAx2eg1P597">Map</a>
+                  <p>Ya Ya Farm & Orchard</p>
+                </div>
+              </div>
+            </div>
+            <div class="index-event__detail">
+              <div class="row">
+                <div class="col-2 col-md-1">
+                  <h6>Parking</h6>
+                </div>
+                <div class="col col-md-8">
+                  <p>Hygiene Elementary School<br>11968 N 75th St<br>Longmont, CO 80503</p>
+                  <a class="button-map" target="_blank" href="https://goo.gl/maps/iDkcb3M1LfM1P66x9">Map</a>
                 </div>
               </div>
             </div>
@@ -738,7 +748,7 @@
                   <h6>Details</h6>
                 </div>
                 <div class="col col-md-8">
-                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony will being around 4pm followed by cocktails, dinner, and dancing.</p>
+                  <p class="sans">The main event. Get gussied up (casual attire) and join us at the orchard. The ceremony will being around 4pm followed by cocktails, dinner, and dancing. Park at the elementary school, a short ride from the venue. Shuttles will be provided before, during, and after the event.</p>
                 </div>
               </div>
             </div>
@@ -908,27 +918,28 @@
             <img src="/images/icon/hotel.png" style="width:6em; height:6em; margin-top:3em;" alt="Hotel" />
           </div>
           <h4>Stay</h4>
+          <div class="index-hotel ">
+            <div class="index-hotel__details">
+              <div class="row">
+                <div class="col-3" style="text-align: center;"></div>
+                <div class="col-6" style="text-align: center;">
+                  <p>Stay in Southwest Longmont at one of our reserved room blocks, conveniently located  15 minutes from Boulder, 10 minutes to the wedding venue, and 5 minutes from downtown Longmont. If you need some help booking lodging, <a style="color: #FF5734" href="mailto:michaelpburt@gmail.com,giaupchurch@gmail.com?subject=Help!" target="_blank">please reach out to us</a>!</p>
+                </div>
+                <div class="col-3" style="text-align: center;"></div>
+              </div>
+            </div>
+          </div>
           <div class="index-hotels">
 
             <div class="index-hotel">
-              <a class="index-hotel__title" href="https://www.palisociety.com/hotels/culver-city/">Boulderado</a>
-              <div class="index-hotel__details">
-                <div class="row">
-                  <div class="col-3 col-md-2">
-                    <h6>Details</h6>
-                  </div>
-                  <div class="col col-md-10">
-                    <p>In downtown Boulder, stay at this beautiful historic hotel where the bride and groom will be staying. Enjoy brunch on patio at Spruce Farm & Fish or take advantage of the central location by walking to restraunts nearby.</p>
-                  </div>
-                </div>
-              </div>
+              <a class="index-hotel__title" href="https://www.ihg.com/holidayinnexpress/hotels/us/en/longmont/qwmco/hoteldetail">Holiday Inn Express, Longmont</a>
               <div class="index-hotel__details">
                 <div class="row">
                   <div class="col-3 col-md-2">
                     <h6>Price</h6>
                   </div>
                   <div class="col col-md-10">
-                    <p>$215/night</p>
+                    <p>$200+/night</p>
                   </div>
                 </div>
               </div>
@@ -938,31 +949,21 @@
                     <h6>Book</h6>
                   </div>
                   <div class="col col-md-10">
-                    <p>Use code “WEDDING”</p>
+                    <p>Use code UBW</p>
                   </div>
                 </div>
               </div>
             </div>
 
             <div class="index-hotel">
-              <a class="index-hotel__title" href="https://www.themayumi.com/">Mayumi</a>
-              <div class="index-hotel__details">
-                <div class="row">
-                  <div class="col-3 col-md-2">
-                    <h6>Details</h6>
-                  </div>
-                  <div class="col col-md-10">
-                    <p>With a combination of design and social spaces, the Mayumi is a new modern hotel in an emerging part of Culver City. Maintains the LA vibe while also having a spa like experience.</p>
-                  </div>
-                </div>
-              </div>
+              <a class="index-hotel__title" href="https://www.marriott.com/en-us/hotels/denlg-courtyard-boulder-longmont/overview/">Courtyard by Marriot, Longmont</a>
               <div class="index-hotel__details">
                 <div class="row">
                   <div class="col-3 col-md-2">
                     <h6>Price</h6>
                   </div>
                   <div class="col col-md-10">
-                    <p>$195/night</p>
+                    <p>$144/night</p>
                   </div>
                 </div>
               </div>
@@ -1069,7 +1070,7 @@
           <h5 class="text-center">Registry</h5>
           <h2 class="text-center">Your presence is a gift</h2>
           <p class="large">
-            Having loving family and friends in our lives is the best gift of all. If you wish to honor us with a wedding gift, we have compiled some ideas <a href="https://www.blueprintregistry.com/registry/daniela-moe-wedding-registry-10-18-2019" target="_blank">here</a>.
+            Having loving family and friends in our lives is the best gift of all. If you wish to honor us with a wedding gift, we have compiled some ideas <a href="https://www.blueprintregistry.com/registry/gia-michael-wedding-registry-8-20-2022" target="_blank">here</a>.
           </p>
         </div>
       </div>
