--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
           <h5 class="text-center">Our Story</h5>
           <h2 class="text-center">A match made in Boulder</h2>
           <p class="large text-center">
-            blah blah Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually, toting some gifts for his new hunny, and assurances that he did indeed send a postcard. Gia was pretty skeptical, until a few months later when she found a postcard in her mailbox. They have been happily inseparable since.
+            Gia & Michael first started spending time together in the summer of 2018. Things started off a little slow, with Michael running off to South Korea immediately following their second date. He returned eventually toting some gifts for his new hunny, and the mention that he had sent a postcard. Gia began to wonder if she could trust this would-be suitor as one month went by, then two months with no postcard in sight. Finally three months later, a card postmarked from Korea appeared in Gia's mailbox and they have been happily inseparable since.
           </p>
         </div>
       </div>
@@ -429,7 +429,7 @@
                 <div class="index-fact__inner-front-icon">
                   <img src="/images/icon/squirrel.png" style="width:5em; height:5em; margin-top:2em;" alt="Squirrel" />
                 </div>
-                Our furry nemisis on McKinley Drive?
+                Our furry nemesis on McKinley Drive?
               </div>
             </div>
             <div class="index-fact__inner-back">
