--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
           <h5 class="text-center">Join Us in Colorado</h5>
           <h2 class="text-center">Wedding & Reception</h2>
           <p class="large text-center">
-            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter to stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall. 
+            We're getting married at Ya Ya Farm & Orchard on August 20th, 2022 and we want to celebrate this most special occasion with our friends and family. The ceremony will begin between 4 and 5 (exact time coming soon) followed by cocktails, dinner, and dancing. Be sure to don your party pants (and maybe ask if the babysitter can stay late) as we are hoping some of you will join us for some downtown Boulder after party antics on the Pearl St Mall. 
           </p>
         </div>
       </div>
